--- a/metadata_validation.yml
+++ b/metadata_validation.yml
@@ -1636,7 +1636,7 @@ validators:
     - callable_builder: noop
       module: SampleService.core.validator.builtin
 
-  gold:habitat:
+  "gold:habitat":
     key_metadata:
       description:
       display_name: Habitat
@@ -1644,7 +1644,7 @@ validators:
     - callable_builder: noop
       module: SampleService.core.validator.builtin
 
-  nmdc:community:
+  "nmdc:community":
     key_metadata:
       description:
       display_name: Community
@@ -1652,7 +1652,7 @@ validators:
     - callable_builder: noop
       module: SampleService.core.validator.builtin
 
-  gold:ncbi_taxonomy_name:
+  "gold:ncbi_taxonomy_name":
     key_metadata:
       description:
       display_name: NCBI taxonomy name
@@ -1660,7 +1660,7 @@ validators:
     - callable_builder: noop
       module: SampleService.core.validator.builtin
 
-  nmdc:ecosystem_subtype:
+  "nmdc:ecosystem_subtype":
     key_metadata:
       description:
       display_name: Ecosystem Subtype
@@ -1668,7 +1668,7 @@ validators:
     - callable_builder: noop
       module: SampleService.core.validator.builtin
 
-  nmdc:ecosystem_type:
+  "nmdc:ecosystem_type":
     key_metadata:
       description:
       display_name: Ecosystem Type
