changing source for NCBI taxonomy CURIE

--- a/metadata_validation.yml
+++ b/metadata_validation.yml
@@ -1652,7 +1652,7 @@ validators:
     - callable_builder: noop
       module: SampleService.core.validator.builtin
 
-  "gold:ncbi_taxonomy_name":
+  "ncbi:taxonomy_name":
     key_metadata:
       description:
       display_name: NCBI taxonomy name
