next set of NMDC terms for FICUS samples

--- a/metadata_validation.yml
+++ b/metadata_validation.yml
@@ -1676,3 +1676,52 @@ validators:
     - callable_builder: noop
       module: SampleService.core.validator.builtin
 
+  "nmdc:type":
+    key_metadata:
+      description:
+      display_name: NMDC sample type
+    validators:
+    - callable_builder: noop
+      module: SampleService.core.validator.builtin
+
+  "nmdc:mod_date":
+    key_metadata:
+      description:
+      display_name: NMDC modification date
+    validators:
+    - callable_builder: noop
+      module: SampleService.core.validator.builtin
+
+  "nmdc:ecosystem":
+    key_metadata:
+      description:
+      display_name: NMDC ecosystem term
+    validators:
+    - callable_builder: noop
+      module: SampleService.core.validator.builtin
+
+  "gold:study_id":
+    key_metadata:
+      description:
+      display_name: GOLD study identifier
+    validators:
+    - callable_builder: noop
+      module: SampleService.core.validator.builtin
+
+  "gold:biosample_id":
+    key_metadata:
+      description: GOLD biosample identifier
+      display_name: Ecosystem Type
+    validators:
+    - callable_builder: noop
+      module: SampleService.core.validator.builtin
+
+  "nmdc:env_local_scale_term":
+    key_metadata:
+      description:
+      display_name: NMDC environment term, local scale
+    validators:
+    - callable_builder: noop
+      module: SampleService.core.validator.builtin
+
+
